- fixed duplicate roguelytics id on index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <p>This is a test Rails4 App for <a href="https://www.roguelytics.com">Roguelytics</a></p>
 <h2 id="documentation-valid-for-master-branch">Documentation valid for <code>master</code> branch</h2>
 <ul>
-<li><a href="#roguelytics">Roguelytics</a></li>
+<li><a href="#roguelytics-info">Roguelytics</a></li>
 <li><a href="#requirements">Requirements</a></li>
 <li><a href="#ruby-and-rails">Ruby and Rails</a></li>
 <li><a href="#activejob">ActiveJob</a></li>
@@ -19,7 +19,7 @@
 <li><a href="#license">License</a></li>
 <li><a href="#about-rogue-studios">About Rogue Studios</a></li>
 </ul>
-<h1 id="roguelytics">Roguelytics</h1>
+<h1 id="roguelytics-info">Roguelytics</h1>
 <p><a href="https://www.roguelytics.com?utm_source=github">Roguelytics</a> The Only TRUE On-Page Analytics Platform</p>
 <h3 id="on-page-and-never-out-of-sight.">On-Page and Never Out of Sight.</h3>
 <p>Logging into separate portals is a thing of the past. By natively placing analytics on-page, your analytics are never out of sight or out of mind.</p>
